--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "dependencies": {
+    "aws-sdk": "^2.888.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "emailjs": "^3.4.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
+    "firebase": "^8.4.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.3",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.7",
     "uuid": "^8.3.2"
   },
