--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mongoose": "^5.12.3",
     "multer": "^1.4.2",
     "nodemon": "^2.0.7",
+    "socket.io": "2.3.0",
     "uuid": "^8.3.2"
   },
   "name": "server",
